# sanic-mail

./: LICENSE  README.md  setup.cfg
sanic_mail/: __init__.py
